--- a/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.html
+++ b/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.html
@@ -219,7 +219,6 @@ window.addEventListener("DOMContentLoaded", main2);
   <li><a class="reference" href="#PubSubPeer"
     title="PubSubPeer = ref object of RootObj
   getConn*: GetConn
-  dropConn*: DropConn
   onEvent*: OnEvent
   codec*: string
   sendConn*: Connection
@@ -281,10 +280,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2Ctypedesc%5BPubSubPeer%5D%2CPeerId%2CGetConn%2CDropConn%2COnEvent%2Cstring%2Cint"
-    title="new(T: typedesc[PubSubPeer]; peerId: PeerId; getConn: GetConn;
-    dropConn: DropConn; onEvent: OnEvent; codec: string; maxMessageSize: int): T:type">new(T: typedesc[PubSubPeer]; peerId: PeerId; getConn: GetConn;
-    dropConn: DropConn; onEvent: OnEvent; codec: string; maxMessageSize: int): T:type</a></li>
+      <li><a class="reference" href="#new%2Ctypedesc%5BPubSubPeer%5D%2CPeerId%2CGetConn%2COnEvent%2Cstring%2Cint"
+    title="new(T: typedesc[PubSubPeer]; peerId: PeerId; getConn: GetConn; onEvent: OnEvent;
+    codec: string; maxMessageSize: int): T:type">new(T: typedesc[PubSubPeer]; peerId: PeerId; getConn: GetConn; onEvent: OnEvent;
+    codec: string; maxMessageSize: int): T:type</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">outbound
@@ -403,7 +402,6 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="PubSubPeer" class="tohide">
 <dt><pre><a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
   <span class="Identifier">getConn</span><span class="Operator">*</span><span class="Other">:</span> <a href="pubsubpeer.html#GetConn"><span class="Identifier">GetConn</span></a>
-  <span class="Identifier">dropConn</span><span class="Operator">*</span><span class="Other">:</span> <a href="pubsubpeer.html#DropConn"><span class="Identifier">DropConn</span></a>
   <span class="Identifier">onEvent</span><span class="Operator">*</span><span class="Other">:</span> <a href="pubsubpeer.html#OnEvent"><span class="Identifier">OnEvent</span></a>
   <span class="Identifier">codec</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
   <span class="Identifier">sendConn</span><span class="Operator">*</span><span class="Other">:</span> <a href="../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a>
@@ -465,9 +463,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L73"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L72"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L73" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L72" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -482,9 +480,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L79"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L78"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L79" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L78" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -494,9 +492,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L213"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L209"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L213" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L209" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -506,9 +504,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L87"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L86"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L87" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L86" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -519,9 +517,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L118"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L117"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L118" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L117" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -531,9 +529,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L76"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L75"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -543,23 +541,23 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L91"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L90"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L91" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L90" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="new,typedesc[PubSubPeer],PeerId,GetConn,DropConn,OnEvent,string,int" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2Ctypedesc%5BPubSubPeer%5D%2CPeerId%2CGetConn%2CDropConn%2COnEvent%2Cstring%2Cint"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">getConn</span><span class="Other">:</span> <a href="pubsubpeer.html#GetConn"><span class="Identifier">GetConn</span></a><span class="Other">;</span>
-         <span class="Identifier">dropConn</span><span class="Other">:</span> <a href="pubsubpeer.html#DropConn"><span class="Identifier">DropConn</span></a><span class="Other">;</span> <span class="Identifier">onEvent</span><span class="Other">:</span> <a href="pubsubpeer.html#OnEvent"><span class="Identifier">OnEvent</span></a><span class="Other">;</span> <span class="Identifier">codec</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span>
-         <span class="Identifier">maxMessageSize</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="new,typedesc[PubSubPeer],PeerId,GetConn,OnEvent,string,int" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2Ctypedesc%5BPubSubPeer%5D%2CPeerId%2CGetConn%2COnEvent%2Cstring%2Cint"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">typedesc</span><span class="Other">[</span><a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">peerId</span><span class="Other">:</span> <a href="../../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">;</span> <span class="Identifier">getConn</span><span class="Other">:</span> <a href="pubsubpeer.html#GetConn"><span class="Identifier">GetConn</span></a><span class="Other">;</span>
+         <span class="Identifier">onEvent</span><span class="Other">:</span> <a href="pubsubpeer.html#OnEvent"><span class="Identifier">OnEvent</span></a><span class="Other">;</span> <span class="Identifier">codec</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">maxMessageSize</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L285"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L281"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L285" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L281" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -569,9 +567,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L94"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L93"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L94" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L93" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -582,9 +580,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L263"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L259"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L263" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L259" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -595,9 +593,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L243"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L239"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L243" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L239" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -607,9 +605,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L82"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L81"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L82" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L81" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -624,9 +622,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L85"
+href="https://github.com/status-im/nim-libp2p/tree/add-socks5-support/libp2p/protocols/pubsub/pubsubpeer.nim#L84"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L85" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/pubsub/pubsubpeer.nim#L84" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -645,7 +643,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-08 15:05:17 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-08 19:06:17 UTC</small>
       </div>
     </div>
   </div>
