--- a/optional-observed-addr/libp2p/transports/wstransport.html
+++ b/optional-observed-addr/libp2p/transports/wstransport.html
@@ -233,10 +233,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">new
-      <li><a class="reference" href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COption%5BMultiAddress%5D"
-    title="new(T: type WsStream; session: WSSession; dir: Direction; timeout = 10.minutes;
-    observedAddr: Option[MultiAddress] = none(MultiAddress)): T:type">new(T: type WsStream; session: WSSession; dir: Direction; timeout = 10.minutes;
-    observedAddr: Option[MultiAddress] = none(MultiAddress)): T:type</a></li>
+      <li><a class="reference" href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COpt%5BMultiAddress%5D"
+    title="new(T: type WsStream; session: WSSession; dir: Direction;
+    observedAddr: Opt[MultiAddress]; timeout = 10.minutes): T:type">new(T: type WsStream; session: WSSession; dir: Direction;
+    observedAddr: Opt[MultiAddress]; timeout = 10.minutes): T:type</a></li>
   <li><a class="reference" href="#new%2Ctypedesc%5BWsTransport%5D%2CUpgrade%2Cset%5BServerFlags%5D%2CopenArray%5BExtFactory%5D%2CRng"
     title="new(T: typedesc[WsTransport]; upgrade: Upgrade; flags: set[ServerFlags] = {};
     factories: openArray[ExtFactory] = []; rng: Rng = nil;
@@ -380,10 +380,9 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="new,typeWsStream,WSSession,Direction,Option[MultiAddress]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COption%5BMultiAddress%5D"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">WsStream</span><span class="Other">;</span> <span class="Identifier">session</span><span class="Other">:</span> <span class="Identifier">WSSession</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
-         <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">.</span><span class="Identifier">minutes</span><span class="Other">;</span>
-         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Option</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span> <span class="Other">=</span> <span class="Identifier">none</span><span class="Other">(</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
+<div id="new,typeWsStream,WSSession,Direction,Opt[MultiAddress]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#new%2CtypeWsStream%2CWSSession%2CDirection%2COpt%5BMultiAddress%5D"><span class="Identifier">new</span></a><span class="Other">(</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Keyword">type</span> <span class="Identifier">WsStream</span><span class="Other">;</span> <span class="Identifier">session</span><span class="Other">:</span> <span class="Identifier">WSSession</span><span class="Other">;</span> <span class="Identifier">dir</span><span class="Other">:</span> <a href="../stream/lpstream.html#Direction"><span class="Identifier">Direction</span></a><span class="Other">;</span>
+         <span class="Identifier">observedAddr</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><a href="../multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">timeout</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">.</span><span class="Identifier">minutes</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T:type</span> {.
     <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
@@ -404,9 +403,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a clear-text WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L337"
+href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L336"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L337" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L336" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -420,9 +419,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 Creates a secure WebSocket transport
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L315"
+href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L314"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L315" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L314" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -450,9 +449,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 accept a new WS connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L235"
+href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L234"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L235" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L234" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -488,9 +487,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L310"
+href="https://github.com/status-im/nim-libp2p/tree/optional-observed-addr/libp2p/transports/wstransport.nim#L309"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L310" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/transports/wstransport.nim#L309" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -561,7 +560,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 12:01:23 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 16:53:03 UTC</small>
       </div>
     </div>
   </div>
